[gd_scene load_steps=3 format=3 uid="uid://b06wwsmyo5xrd"]

[ext_resource type="Texture2D" uid="uid://cchcukt1mtsyo" path="res://SplashImage.png" id="1_oeu7w"]
[ext_resource type="Script" uid="uid://bcfjojafcxsj5" path="res://Scripts/UI/ProjectManager/project_manager.gd" id="1_xltfx"]

[node name="ProjectManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_xltfx")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(0, 50)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Margin" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="Panel/Margin"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HBox" type="HBoxContainer" parent="Panel/Margin/VBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Logo" type="TextureRect" parent="Panel/Margin/VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("1_oeu7w")
expand_mode = 3
stretch_mode = 5

[node name="Label" type="Label" parent="Panel/Margin/VBox/HBox"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
text = "V1.4"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel2" type="PanelContainer" parent="Panel/Margin/VBox"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_vertical = 3

[node name="Margin" type="MarginContainer" parent="Panel/Margin/VBox/Panel2"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="Panel/Margin/VBox/Panel2/Margin"]
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="Panel/Margin/VBox/Panel2/Margin/VBox"]
layout_mode = 2
size_flags_vertical = 0

[node name="ButtonsBox" type="HBoxContainer" parent="Panel/Margin/VBox/Panel2/Margin/VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ImportProject" type="Button" parent="Panel/Margin/VBox/Panel2/Margin/VBox/HBox/ButtonsBox"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 0
focus_mode = 0
theme_override_font_sizes/font_size = 14
text = "Import Project"

[node name="CreateProject" type="Button" parent="Panel/Margin/VBox/Panel2/Margin/VBox/HBox/ButtonsBox"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 0
focus_mode = 0
theme_override_font_sizes/font_size = 14
text = "Create Project"

[node name="OpenDemo" type="Button" parent="Panel/Margin/VBox/Panel2/Margin/VBox/HBox/ButtonsBox"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 0
focus_mode = 0
theme_override_font_sizes/font_size = 14
text = "Open Demo"

[node name="Search" type="LineEdit" parent="Panel/Margin/VBox/Panel2/Margin/VBox/HBox/ButtonsBox"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
placeholder_text = "Search"

[node name="HBox2" type="HBoxContainer" parent="Panel/Margin/VBox/Panel2/Margin/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="Margin" type="MarginContainer" parent="Panel/Margin/VBox/Panel2/Margin/VBox/HBox2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Panel" type="Panel" parent="Panel/Margin/VBox/Panel2/Margin/VBox/HBox2/Margin"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Scroll" type="ScrollContainer" parent="Panel/Margin/VBox/Panel2/Margin/VBox/HBox2/Margin/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
vertical_scroll_mode = 2

[node name="ProjectHolder" type="VBoxContainer" parent="Panel/Margin/VBox/Panel2/Margin/VBox/HBox2/Margin/Panel/Scroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="Panel/Margin/VBox/Panel2/Margin/VBox/HBox2"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="OpenProject" type="Button" parent="Panel/Margin/VBox/Panel2/Margin/VBox/HBox2/VBox"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
disabled = true
text = "Open"

[node name="RenameProject" type="Button" parent="Panel/Margin/VBox/Panel2/Margin/VBox/HBox2/VBox"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
disabled = true
text = "Rename"

[node name="DeleteProject" type="Button" parent="Panel/Margin/VBox/Panel2/Margin/VBox/HBox2/VBox"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
disabled = true
text = "Delete"

[node name="ConvertProject" type="Button" parent="Panel/Margin/VBox/Panel2/Margin/VBox/HBox2/VBox"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
disabled = true
text = "Convert"

[node name="FileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
auto_translate_mode = 1
title = "Open a File"
initial_position = 2
size = Vector2i(800, 500)
always_on_top = true
force_native = true
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.pngRemix", "*.remixProj")
use_native_dialog = true

[node name="RenamePopup" type="AcceptDialog" parent="."]
unique_name_in_owner = true
transparent_bg = true
title = "Rename"
initial_position = 1
size = Vector2i(250, 100)
transparent = true

[node name="Rename" type="LineEdit" parent="RenamePopup"]
unique_name_in_owner = true
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -42.0
offset_right = -8.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 1

[node name="NewProjectPopup" type="AcceptDialog" parent="."]
unique_name_in_owner = true
auto_translate_mode = 1
transparent_bg = true
title = "Rename"
initial_position = 1
size = Vector2i(500, 150)
transparent = true

[node name="Grid" type="GridContainer" parent="NewProjectPopup"]
anchors_preset = -1
anchor_left = 0.016
anchor_top = 0.032
anchor_right = 0.984
anchor_bottom = 0.804
offset_top = 3.2
offset_bottom = -19.6
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="Label" type="Label" parent="NewProjectPopup/Grid"]
layout_mode = 2
text = "Project Name :"

[node name="CreateName" type="LineEdit" parent="NewProjectPopup/Grid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 1
placeholder_text = "Unammed"

[node name="Label2" type="Label" parent="NewProjectPopup/Grid"]
layout_mode = 2
text = "Project Path :"

[node name="ProjectPath" type="LineEdit" parent="NewProjectPopup/Grid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
placeholder_text = "path"
editable = false

[connection signal="pressed" from="Panel/Margin/VBox/Panel2/Margin/VBox/HBox/ButtonsBox/ImportProject" to="." method="_on_import_project_pressed"]
[connection signal="pressed" from="Panel/Margin/VBox/Panel2/Margin/VBox/HBox/ButtonsBox/CreateProject" to="." method="_on_create_project_pressed"]
[connection signal="pressed" from="Panel/Margin/VBox/Panel2/Margin/VBox/HBox/ButtonsBox/OpenDemo" to="." method="_on_open_demo_pressed"]
[connection signal="pressed" from="Panel/Margin/VBox/Panel2/Margin/VBox/HBox2/VBox/OpenProject" to="." method="_on_open_project_pressed"]
[connection signal="pressed" from="Panel/Margin/VBox/Panel2/Margin/VBox/HBox2/VBox/RenameProject" to="." method="_on_rename_project_pressed"]
[connection signal="pressed" from="Panel/Margin/VBox/Panel2/Margin/VBox/HBox2/VBox/DeleteProject" to="." method="_on_delete_project_pressed"]
[connection signal="pressed" from="Panel/Margin/VBox/Panel2/Margin/VBox/HBox2/VBox/ConvertProject" to="." method="_on_convert_project_pressed"]
[connection signal="dir_selected" from="FileDialog" to="." method="_on_file_dialog_dir_selected"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="text_submitted" from="RenamePopup/Rename" to="." method="_on_rename_text_submitted"]
[connection signal="close_requested" from="NewProjectPopup" to="." method="_on_new_project_popup_close_requested"]
[connection signal="confirmed" from="NewProjectPopup" to="." method="_on_new_project_popup_confirmed"]
